cmake_minimum_required(VERSION 3.23)
project(Labor2 C)

set(CMAKE_C_STANDARD 99)

add_executable(Labor2 main.c)
add_executable(Labor2.1 main1.c)
add_executable(Labor2.2 main2.c)
add_executable(Labor2.3 main3.c)
add_executable(Labor2.4 main4.c)
add_executable(Labor2.5 main5.c)
add_executable(Labor2.6 main6.c)
add_executable(labor2.6.1 main6.1.c)